--- a/src/app/paginas/inicioadmin/inicioadmin.component.html
+++ b/src/app/paginas/inicioadmin/inicioadmin.component.html
@@ -13,7 +13,7 @@
     <div class="col-md-4">
       <div class="card">
         <h4>Gestión de Productos</h4>
-        <p>Agrega, edita o elimina productos del catálogo.</p>
+        <p>Agrega, edita o elimina productos de la lista con la que se cuenta.</p>
         <a routerLink="/gestionproductos" class="btn btn-custom">Ir a Productos</a>
       </div>
     </div>
@@ -25,14 +25,5 @@
         <a routerLink="/gestionpedidos" class="btn btn-custom">Ir a Pedidos</a>
       </div>
     </div>
-
-    <div class="col-md-4">
-      <div class="card">
-        <h4>Gestión de Usuarios</h4>
-        <p>Administra cuentas, roles y permisos fácilmente.</p>
-        <a routerLink="/gestionusuarios" class="btn btn-custom">Ir a Usuarios</a>
-      </div>
-    </div>
-
   </div>
 </div>
