--- a/src/app/paginas/gestionproductos/gestionproductos.component.html
+++ b/src/app/paginas/gestionproductos/gestionproductos.component.html
@@ -57,7 +57,7 @@
           <div class="boton">
             <button type="submit" class="btn btn-success">Agregar Producto</button>
           </div>
-          
+
         </form>
       </div>
 
@@ -66,6 +66,21 @@
     <div class="container-box">
       <h2 class="morado text-center">Lista de Productos</h2>
       <hr>
+      <!-- BUSCADOR Y FILTRO -->
+      <section class="max-w-7xl mx-auto p-6">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-4 ">
+          <label for="">BUSCAR PRODUCTOS:</label>
+          <select (change)="filtrar($event)"
+            class="px-5 py-2 rounded-lg bg-gray-800 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <option value="">TODOS</option>
+            <option value="teclado">Teclados</option>
+            <option value="raton">Ratones</option>
+            <option value="monitor">Monitores</option>
+            <option value="laptop">Laptops</option>
+            <option value="accesorio">Accesorios</option>
+          </select>
+        </div>
+      </section>
       <div class="table-responsive">
         <table class="table table-dark table-striped text-center mt-3">
           <thead>
