--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <li class="header">¡Bienvenido!</li>
           <hr>
           <li><a routerLink="/perfil" class="dropdown-item">Mi Perfil</a></li>
-          <li><a routerLink="/compras" class="dropdown-item">Historial de Pedidos</a></li>
+          <li><a routerLink="/compras" class="dropdown-item">Pedidos</a></li>
           <hr>
           <li><a class="logout dropdown-item" (click)="logout()">Cerrar sesión</a></li>
         </ul>
