--- a/src/app/paginas/gestionpedidos/gestionpedidos.component.html
+++ b/src/app/paginas/gestionpedidos/gestionpedidos.component.html
@@ -9,6 +9,7 @@
   <table class="table table-dark table-striped text-center mt-3">
     <thead>
       <tr>
+        <th>Id</th>
         <th>Direccion de envio</th>
         <th>Metodo de pago</th>
         <th>Total</th>
@@ -19,6 +20,7 @@
 
     <tbody>
       <tr *ngFor="let p of pedidos">
+        <td>{{p.idPedido}}</td>
         <td>{{ p.direccionEnvio}}</td>
         <td>{{ p.metodoPago }}</td>
         <td>{{ p.total }}</td>
