--- a/src/app/paginas/inicio/inicio.component.html
+++ b/src/app/paginas/inicio/inicio.component.html
@@ -188,9 +188,8 @@
         </div>
         
         <div class="flex justify-between items-center mt-3 gap-2">
-          <button class="btn-neon flex-1">Ver Detalles</button>
           <button 
-            class="btn btn-success py-2 flex-1"
+            class="  py-2 flex-1 botn"
             [disabled]="p.stock <= 0"
             [class.opacity-50]="p.stock <= 0"
             [class.cursor-not-allowed]="p.stock <= 0"
